# CPP-Homework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
configs/: .clang-format
include/: Application.hpp  Artist.hpp  ConsoleCalculator.hpp  Exceptions.hpp  ICalculatable.hpp  InputParser.hpp  MusicDataBaseHandler.hpp  OutputFormatter.hpp  Parser.hpp
lib/Application/: CMakeLists.txt
lib/Application/include/: Application.hpp
lib/Application/src/: Application.cpp
lib/utils/include/: utils.hpp
lib/utils/src/: utils.cpp
src/: Application.cpp  ConsoleCalculator.cpp  InputParser.cpp  MusicDataBaseHandler.cpp  OutputFormatter.cpp  Parser.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp  unit_test.cpp  unit_tests.cpp
